--- a/src/main/resources/gui/LoginScene.fxml
+++ b/src/main/resources/gui/LoginScene.fxml
@@ -5,7 +5,6 @@
 <?import javafx.geometry.*?>
 
 <VBox alignment="CENTER" spacing="20" prefHeight="900.0" prefWidth="1200" style="-fx-background-color: #333333; -fx-text-fill: white;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="Controllers.LoginSceneController">
-    <Label text="Logowanie" />
     <VBox prefWidth="30" alignment="CENTER" spacing="5">
         <Label text="Login" textFill="WHITE"/>
         <TextField fx:id="usernameField" prefHeight="50.0" maxWidth="200.0"/>
@@ -18,6 +17,6 @@
         <CheckBox fx:id="rememberMeCheckbox" text="Zapamietaj mnie" textFill="WHITE"/>
     </VBox>
     <Button fx:id="loginButton" text="Zaloguj" style="-fx-base: #3b3b3b; -fx-text-fill: white;" prefHeight="50.0" prefWidth="200.0"/>
-    <Label fx:id="infoLabel"/>
+    <Label fx:id="infoLabel" textFill="red"/>
     <Button fx:id="backToMain" text="Powrot" style="-fx-base: #3b3b3b; -fx-text-fill: white;" prefHeight="50.0" prefWidth="200.0"/>
 </VBox>
